manifests/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-82225592-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: 82225592.ce-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: my-app-82225592
            port:
              number: 8080
        pathType: Prefix

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: cloud-sample-ingress
# spec:
#   ingressClassName: ingress-internal
#   rules:
#   - host: cloud-sample-prod.cepg-aa.kubepia.net
#     http:
#       paths:
#       - path: /
#         backend:
#           service:
#             name: cloud-sample
#             port:
#               number: 8080
#         pathType: Prefix
